Updated benchmarking params and added GC logging